[package]
name = "colodot"
version = "0.1.0"
authors = ["\"ferhatgec\""]
edition = "2018"
description = "Powerful Rust implementation of Colorized library"
keywords = ["term", "text", "color", "bindings", "rust"]
readme = "README.md"
repository = "https://github.com/ferhatgec/colodot/"
documentation = "https://docs.rs/colodot"
license-file = "LICENSE"

[dependencies]
